2007-04-23  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: Incorrect rendering of certain SVG files because of
	SVG namespaces. Patch from Bertram Felgenhauer (#375649)
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-image.c: Bug 421697 - rsvg_handle_new_from_file overwrites GError
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bug 421710 - want a way to detect whether 
	gnome-vfs support is enabled (Christian Perch)
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: If dst->virgin is set, dst->x, y, w and h are 
	uninitialised. The result of the addition is already not used, 
	but the addition itself can trigger floating point exceptions, 
	so make sure it's not performed. Bug 427031 (Harald van Dijk)

2007-02-22  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Update reference files. They are generated using MS fonts.
	(http://corefonts.sourceforge.net/)

2007-02-21  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Implement letter-spacing property.
	http://bugzilla.gnome.org/show_bug.cgi?id=410509
	* rsvg-styles.c: parse and handle letter-spacing.
	* rsvg-text.c (rsvg_text_create_layout): set letter spacing attribute.

2007-02-14  Dom Lachowicz <domlachowicz@gmail.com>

	* tests/Makefile.am: Bug 407230 - make check fails when builddir 
	!= srcdir in that certain headers are not found
	* tests/rsvg-test.c: Ditto

2007-02-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Add the W3C test files.

	* tests/rsvg-test.c: generates a html file with test failures.

2007-02-01  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-marker.c (rsvg_marker_render): Don't clip if overflow style
	property is set to visible. Fix display of markers generated with
	inkscape.

2007-01-30  Ross Burton <ross@burtonini.com>

	* rsvg-cairo-draw.c: Bug 402246 - Rsvg was leaking Pango contexts,
	layouts, and GList nodes.
	* rsvg-text.c: Ditto
	
2007-01-29  Dom Lachowicz <domlachowicz@gmail.com>
